[build-system]
requires = ["hatchling","SimpleITK", "numpy","matplotlib"]
build-backend = "hatchling.build"


[project]
name = "pyable_eros_montin"
version = "0.0.3"
authors = [
  { name="Dr. Eros Montin, PhD", email="eros.montin@gmail.com" },
]
description = "Handy things you need for image analysis, at least me"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/erosmontin/pyable"
"Bug Tracker" = "https://github.com/erosmontin/pyable/issues"
