[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true


[project]
name = "pyable_eros_montin"
version = "0.0.5.02"
authors = [
  { name="Dr. Eros Montin, PhD", email="eros.montin@gmail.com" },
]
description = "Handy things you need for image analysis, at least me"
readme = "README.md"
requires-python = ">=3.6"

dependencies = ["numpy","pynico_eros_montin @ git+https://github.com/erosmontin/pynico.git","simpleitk>2.0","matplotlib","scikit-image","PyWavelets"]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/erosmontin/pyable"
"Bug Tracker" = "https://github.com/erosmontin/pyable/issues"
